--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
       <img src="assets/images/Imagem do WhatsApp de 2025-11-10 à(s) 22.44.51_7fdfb347.jpg" alt="minha foto de perfil"
       width="150">
       <h1>Allan Borges</h1>
-      <h2>Minas Gerais - Brazil</h2>
+      <h2>Betim, MG - Brazil</h2>
       <p><q>front-end developer and avid reader</q></p>
 
       <nav>
       <ul>
-        <li><a href="" target="_blank">Github</a></li>
-        <li><a href="" target="_blank">Linkedin</a></li>
-        <li><a href="" target="_blank">Twitter</a></li>
-        <li><a href="" target="_blank">Instagram</a></li>
-        <li><a href="" target="_blank">Frontend Mentor</a></li>
+        <li><a href="https://github.com/AllanBorges9" target="_blank">Github</a></li>
+        <li><a href="https://www.linkedin.com/in/allan-borges-0b9628286" target="_blank">Linkedin</a></li>
+        <li><a href="https://wa.me/5531991293672" target="_blank">WhatsApp</a></li>
+        <li><a href="https://www.instagram.com/borges_a99?igsh=MXRhcnhubjViaWgwbQ%3D%3D&utm_source=qr" target="_blank">Instagram</a></li>
+        <li><a href="https://www.frontendmentor.io/profile/AllanBorges9" target="_blank">Frontend Mentor</a></li>
       </ul>
       </nav>
     </section>
